touch device fix and cleaned up extra spacing

--- a/src/sass/browser.scss
+++ b/src/sass/browser.scss
@@ -27,3 +27,10 @@
         margin-top: 11px;
     }
 }
+
+.ua-ios {
+    #pm_captcha {
+        -webkit-overflow-scrolling: touch;
+        overflow: auto !important;
+    }
+}
